lang.java.statics.test/tests/classes/innerclasssamename.no.spt
module classes/innerclasssamename_no

language metaborg-java

test innerclasssamename [[

test;



// error: class C is already defined in package unnamed package

[C]
public class C {
    public class C {}
}


]] analysis fails
   run javacFails to ""
